// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`选择范围测试 初始化渲染 1`] = `
<div class="xbf-mainbox">
  <div class="xbf-fr xbf-lh30 xbf-flex"><span type="text" class="xbf-fr xbf-linttext" style="display: none;"> 更多筛选 <i aria-label="icon: caret-down" class="anticon anticon-caret-down"><svg viewBox="0 0 1024 1024" data-icon="caret-down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg></i></span></div>
  <div class="xbf-filtercomp-box">
    <div name="age" class="xbf-filterdropitem">
      <div>
        <div class="xbf-hoverpoper-wraper filterdrop">
          <div>
            <div><span type="text" class="xbf-filtertitle"> 年龄 <i aria-label="icon: caret-down" class="anticon anticon-caret-down"><svg viewBox="0 0 1024 1024" data-icon="caret-down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg></i></span><span class="xbf-splitdash">|</span></div>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div class="xbf-clear" style="display: none;">
    <div class="xbf-fr xbf-linttext"><span type="text">清空筛选</span></div>
    <div class="xbf-selectedbox">
      <!---->
    </div>
  </div>
</div>
`;

exports[`选择范围测试 点击筛选项后 点击下拉渲染 1`] = `
<div class="xbf-mainbox">
  <div class="xbf-fr xbf-lh30 xbf-flex"><span type="text" class="xbf-fr xbf-linttext" style="display: none;"> 更多筛选 <i aria-label="icon: caret-down" class="anticon anticon-caret-down"><svg viewBox="0 0 1024 1024" data-icon="caret-down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg></i></span></div>
  <div class="xbf-filtercomp-box">
    <div name="age" class="xbf-filterdropitem">
      <div>
        <div class="xbf-hoverpoper-wraper filterdrop">
          <div>
            <div><span type="text" class="xbf-filtertitle"> 年龄 <i aria-label="icon: caret-up" class="anticon anticon-caret-up"><svg viewBox="0 0 1024 1024" data-icon="caret-up" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"></path></svg></i></span><span class="xbf-splitdash">|</span></div>
          </div>
          <div class="xbf-poper-wraper" style="padding-top: 0px; min-width: 0px;">
            <div class="xbf-poper">
              <div class="xbf-rangepopbox">
                <div tabindex="0" class="ant-select ant-select-enabled ant-select-focused" style="min-width: 80px;">
                  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
                    <div class="ant-select-selection__rendered">
                      <div title="" class="ant-select-selection-selected-value" style="display: block; opacity: 1;"></div>
                    </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
                  </div>
                </div><span class="xbf-numpadDash">-</span>
                <div tabindex="0" class="ant-select ant-select-enabled" style="min-width: 80px;">
                  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
                    <div class="ant-select-selection__rendered">
                      <div title="" class="ant-select-selection-selected-value" style="display: block; opacity: 1;"></div>
                    </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
                  </div>
                </div><button type="button" class="xbf-confirmbtn ant-btn ant-btn-primary ant-btn-sm"><span>确 定</span></button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="xbf-clear" style="display: none;">
    <div class="xbf-fr xbf-linttext"><span type="text">清空筛选</span></div>
    <div class="xbf-selectedbox">
      <!---->
    </div>
  </div>
</div>
`;

exports[`选择范围测试 点击筛选项后渲染 1`] = `
<div class="xbf-mainbox">
  <div class="xbf-fr xbf-lh30 xbf-flex"><span type="text" class="xbf-fr xbf-linttext" style="display: none;"> 更多筛选 <i aria-label="icon: caret-down" class="anticon anticon-caret-down"><svg viewBox="0 0 1024 1024" data-icon="caret-down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"></path></svg></i></span></div>
  <div class="xbf-filtercomp-box">
    <div name="age" class="xbf-filterdropitem">
      <div>
        <div class="xbf-hoverpoper-wraper filterdrop">
          <div>
            <div><span type="text" class="xbf-filtertitle"> 年龄 <i aria-label="icon: caret-up" class="anticon anticon-caret-up"><svg viewBox="0 0 1024 1024" data-icon="caret-up" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"></path></svg></i></span><span class="xbf-splitdash">|</span></div>
          </div>
          <div class="xbf-poper-wraper" style="padding-top: 0px; min-width: 0px;">
            <div class="xbf-poper">
              <div class="xbf-rangepopbox">
                <div tabindex="0" class="ant-select ant-select-enabled" style="min-width: 80px;">
                  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
                    <div class="ant-select-selection__rendered">
                      <div title="" class="ant-select-selection-selected-value" style="display: block; opacity: 1;"></div>
                    </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
                  </div>
                </div><span class="xbf-numpadDash">-</span>
                <div tabindex="0" class="ant-select ant-select-enabled" style="min-width: 80px;">
                  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-controls="test-uuid" class="ant-select-selection ant-select-selection--single">
                    <div class="ant-select-selection__rendered">
                      <div title="" class="ant-select-selection-selected-value" style="display: block; opacity: 1;"></div>
                    </div><span unselectable="on" class="ant-select-arrow" style="user-select: none;"><i aria-label="icon: down" class="ant-select-arrow-icon anticon anticon-down"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></i></span>
                  </div>
                </div><button type="button" class="xbf-confirmbtn ant-btn ant-btn-primary ant-btn-sm"><span>确 定</span></button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="xbf-clear" style="display: none;">
    <div class="xbf-fr xbf-linttext"><span type="text">清空筛选</span></div>
    <div class="xbf-selectedbox">
      <!---->
    </div>
  </div>
</div>
`;
